<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epiphany</string>
    <string name="action_staggered">Staggered</string>
    <string name="action_list">List</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload Library</string>
    <string name="action_quick_notes">Quick Notes</string>
    <string name="action_recent_notes">Recent Notes</string>
    <string name="action_search">Search</string>
    <string name="action_clean_database">Clean Database</string>
    <string name="action_drag">Toggle Drag Handle</string>

    <string name="action_save_pdf">Save as new note</string>
    <string name="action_font_size">Change Font Size</string>
    <string name="action_font_10">10</string>
    <string name="action_font_12">12</string>
    <string name="action_font_14">14 (default)</string>
    <string name="action_font_15">15</string>
    <string name="action_font_16">16</string>
    <string name="action_font_18">18</string>
    <string name="action_font_20">20</string>
    <string name="action_font_24">24</string>

    <string name="move_note_here">Move here</string>
    <string name="cant_move_here">Can\'t move here</string>

    <!--Strings for Fab Menu-->
    <string name="fab_new_bucket">New Bucket</string>
    <string name="fab_new_folder">New Folder</string>
    <string name="fab_new_note">New Note</string>
    <string name="fab_rename_bucket">Rename Bucket</string>
    <string name="fab_rename_folder">Rename Folder</string>
    <string name="fab_remove_folder">Delete Folder</string>
    <string name="fab_new_quick_note">New Quick Note</string>

    <string name="fab_edit_note">Edit</string>
    <string name="fab_share_note">Share</string>
    <string name="fab_info_note">Info</string>
    <string name="fab_open_link_note">Open Url</string>

    <!--Strings for Dialogs-->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete_note_title">Delete note</string>
    <string name="dialog_delete_note_message">Are you sure you want to delete this note?</string>
    <string name="dialog_delete_folder_title">Delete folder</string>
    <string name="dialog_delete_folder_message">Are you sure you want to delete this folder?</string>
    <string name="dialog_save_note_title">Note modified</string>
    <string name="dialog_save_note_message">Do you want to save before exiting?</string>
    <string name="dialog_close_title">Closing epiphany</string>
    <string name="dialog_close_message">Are you sure you want to quit?</string>
    <string name="dialog_clean_db_title">Database cleanup</string>
    <string name="dialog_clean_db_message">Are you sure you want to clean the database? Don\'t worry, no notes will be deleted.</string>
    <string name="dialog_html_to_markdown_title">Web page conversion</string>
    <string name="dialog_html_to_markdown_message">Do you want to save this page as a markdown note?</string>
    <string name="dialog_html_to_markdown_yes">Yes, convert</string>
    <string name="dialog_html_to_markdown_no">No, save URL</string>

    <!--Strings for Toasts-->
    <string name="toast_note_saved">Note saved</string>
    <string name="toast_note_saved_fail">Note couldn\'t be saved</string>
    <string name="toast_back_to_quit">Press Back again to close app</string>

    <!--Strings for Settings-->
    <string name="pref_root_directory_title">Select storage folder</string>

    <!--Strings for Actionbar-->
    <string name="title_library">Library</string>
    <string name="title_recent_notes">Recent Notes</string>
    <string name="title_quicknotes_bucket">Quick Notes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_add_note">Add Note</string>
    <string name="title_edit_note">Edit Note</string>
    <string name="title_view_note">View Note</string>
    <string name="title_view_pdf">View PDF</string>
    <string name="title_view_photo">View Photo</string>
    <string name="title_import_note">Import Note</string>

    <string name="title_activity_editor">Edit Note</string>

    <string name="info_note_title">Note information</string>
    <string name="info_note_created_at">Created at</string>
    <string name="info_note_updated_at">Updated at</string>
    <string name="info_note_lines">Lines number</string>
    <string name="info_note_filename">Filename</string>
    <string name="info_note_path">Path</string>

    <!--Strings for Header-->
    <string name="rack_title">Buckets</string>

    <!--Strings for NotebookRow-->
    <string name="notebook_count_text">Notes</string>

    <!--Strings for MarkdownEditor-->
    <string name="add_note_hint">What is on your mind?</string>

    <!--Strngs for CreateNotebookDialog-->
    <string name="create_notebook">Create</string>
    <string name="rename_notebook">Rename</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="no_more_load_retry">No more items to load. Refresh to retry.</string>
    <string name="endless_disabled">No more items to load (max reached).</string>
    <string name="endless_cancel">Cancelled by the user.</string>
    <string name="endless_error">An error occurred while loading more items.</string>

    <string-array name="pref_note_order_entries">
        <item>Modified Date</item>
        <item>Creation Date</item>
        <item>Note Title</item>
    </string-array>

    <string-array name="pref_note_entries_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_bucket_grid_entries">
        <item>1 Columns</item>
        <item>2 Columns</item>
        <item>3 Columns</item>
        <item>4 Columns</item>
    </string-array>

    <string-array name="pref_bucket_grid_entries_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_note_editor_theme">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string-array name="pref_note_preview_theme">
        <item>light</item>
        <item>dark</item>
    </string-array>

</resources>
