<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_font_size"
        android:title="@string/action_font_size"
        android:icon="@drawable/ic_format_size_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="1">

        <menu>
            <group
                android:id="@+id/group_font"
                android:checkableBehavior="single">

                <item android:id="@+id/action_font_10" android:title="@string/action_font_10" />
                <item android:id="@+id/action_font_12" android:title="@string/action_font_12" />
                <item android:id="@+id/action_font_14" android:title="@string/action_font_14" android:checked="true" />
                <item android:id="@+id/action_font_15" android:title="@string/action_font_15" />
                <item android:id="@+id/action_font_16" android:title="@string/action_font_16" />
                <item android:id="@+id/action_font_18" android:title="@string/action_font_18" />
                <item android:id="@+id/action_font_20" android:title="@string/action_font_20" />
                <item android:id="@+id/action_font_24" android:title="@string/action_font_24" />
            </group>
        </menu>

    </item>

    <item
        android:id="@+id/save_pdf"
        android:title="@string/action_save_pdf"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="1"/>
</menu>