<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.neromatt.epiphany.ui.MainActivity">

    <item
        android:id="@+id/action_list_layout"
        android:title="@string/action_list"
        android:visible="false"
        android:icon="@drawable/ic_view_stream_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/action_staggered_layout"
        android:title="@string/action_staggered"
        android:visible="false"
        android:icon="@drawable/ic_dashboard_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/action_quick_notes"
        android:title="@string/action_quick_notes"
        android:orderInCategory="99"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!--item
        android:id="@+id/action_reload"
        android:title="@string/action_reload"
        android:orderInCategory="101"
        app:showAsAction="never" /-->
</menu>
