<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_info_inner"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="130sp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:text="@string/info_note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:singleLine="true"
        android:text="@string/info_note_filename"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/info_title" />

    <TextView
        android:id="@+id/note_filename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_title" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:singleLine="true"
        android:text="@string/info_note_path"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/note_filename" />

    <TextView
        android:id="@+id/note_path"
        android:textColor="@color/textColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_filename" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:singleLine="true"
        android:text="@string/info_note_created_at"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/note_path" />

    <TextView
        android:id="@+id/note_created_at"
        android:textColor="@color/textColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_path"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:singleLine="true"
        android:text="@string/info_note_updated_at"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/note_created_at" />

    <TextView
        android:id="@+id/note_updated_at"
        android:textColor="@color/textColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_created_at"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:singleLine="true"
        android:text="@string/info_note_lines"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/note_updated_at" />

    <TextView
        android:id="@+id/note_lines"
        android:textColor="@color/textColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_updated_at"/>

    <!--LinearLayout
        android:visibility="gone"
        android:id="@+id/bottom_info_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">



        </LinearLayout>

    </LinearLayout-->

</androidx.constraintlayout.widget.ConstraintLayout>